--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'FCV'
-version '1.0-SNAPSHOT'
+version '0.0.1'
 
 apply plugin: 'java'
 
@@ -13,7 +13,7 @@ task fatJar(type: Jar) {
                 'Implementation-Version': version,
                 'Main-Class': 'GhostingAnalyzer'
     }
-    baseName = project.name + '-all'
+    baseName = project.name
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
